Fixed lists on mobile

--- a/assets/css/responsive/main.css
+++ b/assets/css/responsive/main.css
@@ -13,6 +13,9 @@
         text-align: center;
         margin: 7% 0;
     }
+}
+
+@media (max-width: 1250px){
     ul, ol{
         padding-left: 4%;
     }
